- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)

Allgemein
- Neue Platzhalter für Datumsfragmente:
  DATE_YEAR, DATE_MONTH, DATE_DAY, DATE_TIME
- Neu, über den Modul Manager installierte Module, erscheinen nicht in der
  Inhalts Navigation.

File Browser
- Beim Datei-Upload kann zwischen dem normalen Upload oder der Verwendung des
  File Uploader Moduls (sofern vorhanden) ausgewählt werden.

Content Manager
- Der CSS-Name und das "target" für Navigationslinks können nun auch an Unterseiten vererbt werden
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion
- Die Seiten Struktur wird nun für alle Sprachen synchronisiert
- Seiten können per drag&drop strukturiert werden
- Neuer WYSIWYG Editor (siehe CKEDITOR unten)
- Eine Contentseite kann nun auf eine andere Sprache verweisen und deren
  Content verwenden, damit nicht Seiten mit gleichem Inhalt in mehreren
  Sprachen erfasst werden müssen.

Benutzerverwaltung
- Beim Erfassen eines neuen Benutzerkontos kann automatisch eine persönliche
  Kategorie beim Digital Asset Management Modul erstellt werden.
- Das Aktualisierungsintervall der Benutzersitzungen in der Datenbank
  kann definiert werden.
- Bei der Auflistung der Benutzer wird der Link 'zum Adressbuch hinzufügen'
  nur dann angezeigt, sofern der jeweilige Benutzer nicht bereits im Adressbuch
  enthalten ist.
- Für jede Benutzergruppe kann eine Homepage definiert werden, auf welche sich
  die dazugehörigen Benutzer nach erfolgreicher Authentifizierung laden
  sollen.
- Für jeden Benutzer kann eine primäre Benutzergruppe definiert werden.
- Der Platzhalter [[ACCESS_USER_PRIMARY_GROUP]] gibt den Namen der primären
  Benutzergruppe aus.
- Die Registrierungsmaske kann optional um ein CAPTCHA erweitert werden.
- Die Registrierungsmaske kann optional um die Aufforderung der AGB's zu